Added new listConversations() method in service.